# ergocub-gazebo-simulations

./: .gitignore  CMakeLists.txt  README.md
conf_stickBot/: gazebo_icub_head_inertial.xml  gazebo_icub_l_arm_ft_sensor.xml  gazebo_icub_l_foot_front_ft_sensor.xml  gazebo_icub_l_foot_rear_ft_sensor.xml  gazebo_icub_r_foot_rear_ft_sensor.xml  gazebo_icub_robotname.ini  gazebo_inertial.ini  icub.xml  launch-yarp-robot-logger.xml  worldInterface.ini
conf_stickBot/FT/: gazebo_icub_l_arm_ft_sensor.xml  gazebo_icub_l_arm_ft_sensor_nws_ros2.xml  gazebo_icub_l_arm_ft_sensor_nws_yarp.xml  gazebo_icub_l_foot_front_ft_sensor_nws_ros2.xml  gazebo_icub_l_foot_front_ft_sensor_nws_yarp.xml  gazebo_icub_l_foot_rear_ft_sensor_nws_ros2.xml  gazebo_icub_l_foot_rear_ft_sensor_nws_yarp.xml  gazebo_icub_left_arm_ft.ini  gazebo_icub_left_foot_front_ft.ini  gazebo_icub_left_foot_rear_ft.ini  gazebo_icub_r_arm_ft_sensor.xml  gazebo_icub_r_arm_ft_sensor_nws_ros2.xml  gazebo_icub_r_arm_ft_sensor_nws_yarp.xml  gazebo_icub_r_foot_front_ft_sensor.xml  gazebo_icub_r_foot_front_ft_sensor_nws_ros2.xml  gazebo_icub_r_foot_front_ft_sensor_nws_yarp.xml  gazebo_icub_r_foot_rear_ft_sensor_nws_ros2.xml  gazebo_icub_r_foot_rear_ft_sensor_nws_yarp.xml  gazebo_icub_right_arm_ft.ini  gazebo_icub_right_foot_front_ft.ini  gazebo_icub_right_foot_rear_ft.ini
conf_stickBot/estimators/: wbd_icub3_sim.xml
conf_stickBot/gazebo_all_joints_remapper/: all_joints-mc.xml
conf_stickBot/gazebo_icub_alljoints/: gazebo_icub_alljoints_nws_ros2.xml  gazebo_icub_alljoints_remapper.xml
conf_stickBot/gazebo_icub_chest_inertial/: gazebo_icub_chest_inertial.ini  gazebo_icub_chest_inertial_nws_yarp.xml
conf_stickBot/gazebo_icub_head_inertial/: gazebo_icub_head_inertial.ini  gazebo_icub_head_inertial_nws_ros2.xml  gazebo_icub_head_inertial_nws_yarp.xml
conf_stickBot/gazebo_icub_head_without_eyes_V2_7/: gazebo_icub_head_without_eyes_V2_7.ini  gazebo_icub_head_without_eyes_V2_7_nws_yarp.xml  gazebo_icub_head_without_eyes_V2_7_remapper.xml
conf_stickBot/gazebo_icub_laser/: gazebo_icub_laser.ini  gazebo_icub_laser_nws_ros.xml  gazebo_icub_laser_nws_yarp.xml
conf_stickBot/gazebo_icub_left_arm_no_hand_for_no_hand_model/: gazebo_icub_left_arm_no_hand_for_no_hand_model.ini  gazebo_icub_left_arm_no_hand_for_no_hand_model_nws_yarp.xml  gazebo_icub_left_arm_no_hand_for_no_hand_model_remapper.xml
conf_stickBot/gazebo_icub_left_leg/: gazebo_icub_left_leg.ini  gazebo_icub_left_leg_nws_yarp.xml  gazebo_icub_left_leg_remapper.xml
conf_stickBot/gazebo_icub_rgbd_camera_eyes/: gazebo_icub_camera_tilt.ini  gazebo_icub_rgbd_camera_eyes.ini  gazebo_icub_rgbd_camera_eyes_nws_ros.xml  gazebo_icub_rgbd_camera_eyes_nws_ros2.xml  gazebo_icub_rgbd_camera_eyes_nws_yarp.xml
conf_stickBot/gazebo_icub_right_arm_no_hand_for_no_hand_model/: gazebo_icub_right_arm_no_hand_for_no_hand_model.ini  gazebo_icub_right_arm_no_hand_for_no_hand_model_nws_yarp.xml  gazebo_icub_right_arm_no_hand_for_no_hand_model_remapper.xml
conf_stickBot/gazebo_icub_right_leg/: gazebo_icub_right_leg.ini  gazebo_icub_right_leg_nws_yarp.xml  gazebo_icub_right_leg_remapper.xml
conf_stickBot/gazebo_icub_torso/: gazebo_icub_torso.ini  gazebo_icub_torso_nws_yarp.xml  gazebo_icub_torso_remapper.xml
conf_stickBot/launch/: robot_state_publisher.launch.py
conf_stickBot/link_attacher/: linkattacher.ini  linkattacher_center_box.ini  linkattacher_weight_left.ini  linkattacher_weight_right.ini
conf_stickBot/motorControl/: gazebo_icub_all_mc_nws_ros.xml  gazebo_icub_all_mc_nws_ros2.xml  (+1 more)
scripts/: conf.ini  enums.py  experiment_runner.py  fix_inertias.py  modifiers.py  modify_robot.py
(+40 files in other folders)
